package dk.mtdm.world.entity;

public class Player extends Entity {

}
