package dk.mtdm.world.tiles;

public interface BlockingTile {

}
