package dk.mtdm.world.tiles;

import dk.mtdm.world.Location;

public abstract class ComponentTile extends Tile{

    public ComponentTile(Location location) {
        super(location);
    }

}
