package dk.mtdm.world.tiles;

import dk.mtdm.world.Location;

public abstract class GroundTile extends Tile {

        public GroundTile(Location location) {
                super(location);
        }

}
