package dk.mtdm.world.tiles;

public class NonBlockingGroundTile implements NonBlockingTile {

}
